crates/vfox/src/hooks/snapshots/vfox__hooks__pre_install__tests__nodejs-2.snap
---
source: crates/vfox/src/hooks/pre_install.rs
expression: pre_install
---
PreInstall {
    version: "20.1.0",
    url: Some(
        "file:///fake/nodejs/node-v20.1.0.tar.gz",
    ),
    note: None,
    sha256: Some(
        "fakehash20.1.0",
    ),
    md5: None,
    sha1: None,
    sha512: None,
    attestation: None,
}
